# eventgraph

./: CLAUDE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish-crates.yml
docs/: agent-primitives.md  codegraph-examples.md  derivation-method.md  grammar.md  product-layers.md
docs/compositions/: 01-work.md  02-market.md  03-social.md  04-justice.md  05-build.md  06-knowledge.md  07-alignment.md  08-identity.md  09-bond.md  10-belonging.md  11-meaning.md  12-evolution.md  13-being.md  README.md
docs/examples/: 03-consent-journal.md  04-community-governance.md  06-research-integrity.md  08-family-decision-log.md  README.md
docs/products/: work.md
docs/tests/: README.md
docs/tutorials/: 01-first-primitive.md  02-custom-store.md  03-connect-two-graphs.md
dotnet/: README.md
examples/minimal/: Minimal.cs  minimal.py  minimal.rs  minimal.ts
go/: go.mod  go.sum
posts/: README.md  summary.md
python/: README.md  pyproject.toml
rust/: Cargo.toml  README.md
rust/src/: agent.rs  authority.rs  bus.rs  compositions.rs  errors.rs  event.rs  grammar.rs  lib.rs  primitive.rs  sqlite_store.rs  store.rs  tick.rs  types.rs
rust/src/compositions/: alignment.rs  being.rs  belonging.rs  bond.rs  build.rs  evolution.rs  identity.rs  justice.rs  knowledge.rs  market.rs  meaning.rs  social.rs  work.rs
rust/tests/: agent_test.rs  authority_test.rs  compositions_test.rs  conformance_test.rs  event_test.rs  grammar_test.rs  integration_test.rs  sqlite_store_test.rs  store_test.rs  tick_test.rs  types_test.rs
ts/: README.md  package-lock.json  package.json
(+201 files in other folders)
